change - addIncident API change - uploadImage API